section two and one is done

--- a/index.html
+++ b/index.html
@@ -4,10 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="font-raleway">
+
+    <header>
+        <nav>
+            <dav class="logo">
+                <h2>LOGO</h2>
+            </dav>
+            <button class="btn">Sign Up</button>
+        </nav>
+
+        <section class="header-info">
+            <h1 class="header-title">Cool Dark UI Template for <br> Webflow 
+                Agencies!</h1>
+            <button class="btn2">Stay Focused</button>
+        </section>
+
+    </header>
+
+    <!-- section one -->
+
+    <section>
+        <div class="section-one">
+            <div>
+                <h2 >See It in Action</h2>
+                <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
+                <button class="btn3">Launch Live Preview</button>
+            </div>
+            <div>
+                 <img class="mini-img" src="./Assets/wc-mini.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-- section  one end -->
+
+    <!-- section two -->
+
+    <section class="user-container">
+        <div class="user-card">
+            <div class="user-details">
+                <h4>Joined Thousands of Productive Users</h1>
+            </div>
+            <div class="user-info">
+                <div class="user-number">
+                    <h1>50k</h1>
+                    <p>Active user</p>
+                </div>
+                <div class="user-number">
+                   <h1>50k</h1>
+                   <p>Active user</p>
+                </div>
+                <div class="user-number">
+                      <h1>50k</h1>
+                      <p>Active user</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- section two end -->
+
+
+    <!-- section three -->
+
+    <section class="card-user">
+
+        <div class="card-info">
+            <div class="user-star">
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt=""> 
+                <img src="./Assets/icon-star.png" alt="">
+            </div>
+            <h2>Loved by Designers</h2>
+            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+            <div class="reviwer-name">
+                <img src="./Assets/avatar.png" alt="">
+                <div><p>Reviewer name</p>
+                   <p> Date</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- section three -->
     
 </body>
 </html>
