--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="font-raleway">
 
     <header>
@@ -20,7 +23,7 @@
         </nav>
 
         <section class="header-info">
-            <h1 class="header-title">Cool Dark UI Template for <br> Webflow 
+            <h1 class="header-title">Cool Dark UI Template for <br> Webflow
                 Agencies!</h1>
             <button class="btn2">Stay Focused</button>
         </section>
@@ -32,12 +35,12 @@
     <section>
         <div class="section-one">
             <div>
-                <h2 >See It in Action</h2>
+                <h2>See It in Action</h2>
                 <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
                 <button class="btn3">Launch Live Preview</button>
             </div>
             <div>
-                 <img class="mini-img" src="./Assets/wc-mini.png" alt="">
+                <img class="mini-img" src="./Assets/wc-mini.png" alt="">
             </div>
         </div>
     </section>
@@ -57,12 +60,12 @@
                     <p>Active user</p>
                 </div>
                 <div class="user-number">
-                   <h1>50k</h1>
-                   <p>Active user</p>
+                    <h1>50k</h1>
+                    <p>Active user</p>
                 </div>
                 <div class="user-number">
-                      <h1>50k</h1>
-                      <p>Active user</p>
+                    <h1>50k</h1>
+                    <p>Active user</p>
                 </div>
             </div>
         </div>
@@ -70,31 +73,91 @@
     <!-- section two end -->
 
 
-    <!-- section three -->
+    <!-- section three  error try to fixing-->
 
-    <section class="card-user">
-
-        <div class="card-info">
-            <div class="user-star">
-                <img src="./Assets/icon-star.png" alt=""> 
-                <img src="./Assets/icon-star.png" alt=""> 
-                <img src="./Assets/icon-star.png" alt=""> 
-                <img src="./Assets/icon-star.png" alt=""> 
-                <img src="./Assets/icon-star.png" alt="">
+    <section class="section-three">
+        <h2>What our users say</h2>
+        <div class="card">
+            <div class="card details">
+                <div class="star">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                </div>
+                <h3>Loved by Designers</h3>
+                <p>This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                <div class="class-reviwer">
+                    <img src="./Assets/avatar.png" alt="">
+                    <div class="date">
+                        <strong>Class reviwer</strong>
+                        <small>Date</small>
+                    </div>
+                </div>
             </div>
-            <h2>Loved by Designers</h2>
-            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
-            <div class="reviwer-name">
-                <img src="./Assets/avatar.png" alt="">
-                <div><p>Reviewer name</p>
-                   <p> Date</p>
+            <div class="card details">
+                <div class="star">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                </div>
+                <h3>Loved by Designers</h3>
+                <p>This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                <div class="class-reviwer">
+                    <img src="./Assets/avatar.png" alt="">
+                    <div class="date">
+                        <strong>Class reviwer</strong>
+                        <small>Date</small>
+                    </div>
+                </div>
+            </div>
+            <div class="card details">
+                <div class="star">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                    <img src="./Assets/icon-star.png" alt="">
+                </div>
+                <h3>Loved by Designers</h3>
+                <p>This template instantly leveled up our <br> presence.” – Studio Vertex</p>
+                <div class="class-reviwer">
+                    <img src="./Assets/avatar.png" alt="">
+                    <div class="date">
+                        <strong>Class reviwer</strong>
+                        <small>Date</small>
+                    </div>
                 </div>
             </div>
         </div>
-
     </section>
 
-    <!-- section three -->
+    <!-- section three still trying to fix -->
+
+
+    <!-- section forth -->
+
+    <section class="resource">
+        <div class="dev-info">
+            <div class="dev-resource">
+                <h1>Ready to focus better</h1>
+                <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="btn3">Ger Started Free</button>
+            </div>
+            <div >
+                <img class="wc-mini" src="./Assets/wc-big.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-- section forth end -->
+
     
+
+
 </body>
+
 </html>
